force-app/main/default/objects/claim__c/claim__c.object-meta.xml
<CustomObject>
    <label>claim</label>
    <nameField>
        <displayFormat>c-{0000}</displayFormat>
        <label>claim Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>