force-app/main/default/objects/claim__c/fields/Assign_Agent__c.field-meta.xml
<CustomField>
    <fullName>Assign_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assign Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>claims1</relationshipName>
    <type>Lookup</type>
</CustomField>