force-app/main/default/objects/claim__c/fields/Claim_Age__c.field-meta.xml
<CustomField>
    <fullName>Claim_Age__c</fullName>
    <formula>IF(ISBLANK(Claim_Date__c),0,TODAY()-Claim_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>