force-app/main/default/objects/claim__c/fields/Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Claim_Number__c</fullName>
    <displayFormat>CN-{00000}</displayFormat>
    <label>Claim Number</label>
    <type>AutoNumber</type>
</CustomField>