force-app/main/default/objects/claim__c/fields/Fraud_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Risk_Score__c</fullName>
    <label>Fraud Risk Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>