force-app/main/default/objects/claim__c/fields/Insurance_policy__c.field-meta.xml
<CustomField>
    <fullName>Insurance_policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance policy</label>
    <referenceTo>Insurance_policy__c</referenceTo>
    <relationshipLabel>claims</relationshipLabel>
    <relationshipName>claims</relationshipName>
    <type>Lookup</type>
</CustomField>