force-app/main/default/objects/claim__c/fields/Settlement_Variance__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Variance__c</fullName>
    <formula>Claim_Amount__c - Approved_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Settlement Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>