force-app/main/default/objects/claim__c/validationRules/Approved_Not_Over_Claim.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Not_Over_Claim</fullName>
    <active>true</active>
    <errorConditionFormula>Approved_Amount__c &gt; Claim_Amount__c</errorConditionFormula>
    <errorMessage>Approved Amount cannot exceed Claim Amount.</errorMessage>
</ValidationRule>