force-app/main/default/objects/claim__c/validationRules/Claim_Amount_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Claim_Amount_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Claim_Amount__c &lt;=0</errorConditionFormula>
    <errorMessage>Claim Amount must be greater than 0.</errorMessage>
</ValidationRule>