force-app/main/default/objects/claim__c/validationRules/Incident_Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Incident_Date_Not_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Incident_Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Incident Date cannot be in the future.</errorMessage>
</ValidationRule>