force-app/main/default/objects/claim__c/validationRules/Rejection_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c,&apos;Rejected&apos;), ISBLANK(Rejection_Reason__c))</errorConditionFormula>
    <errorMessage>Rejection Reason is required when claim is rejected.</errorMessage>
</ValidationRule>