force-app/main/default/objects/claim__c/validationRules/Resolution_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c,&apos;Closed&apos;), ISBLANK(Resolution__c))</errorConditionFormula>
    <errorMessage>Resolution is required before closing.</errorMessage>
</ValidationRule>